# prime

./: CMakeLists.txt  main.cpp
core/: gridarray.hpp  solver.hpp
lib/: measure.hpp  pool.hpp  progress.hpp  timer.hpp
